[package]
name = "feeds"
version = "0.1.0"
authors = ["Artem <griukov@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
jsonwebtoken = "7"
nanoid = "0.4.0"
lazy_static = "1.4.0"
futures = "0.3.15"
actix-service = "1"
actix-rt = "1.1.1"
async-trait = "0.1.50"
lapin = "1.7.1"
auth_middleware = {path = "../crates/auth_middleware"}
claims = {path = "../crates/claims"}
errors = {path = "../crates/errors"}
redis = "0.14.0"
tokio = { version = "0.2.25", features = ["full"] }
 

[dev-dependencies]
mockall = "0.9.1"
rstest = "0.10.0"
