[package]
name = "streams"
version = "0.1.0"
authors = ["Artem <griukov@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
mongodb = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
jsonwebtoken = "7"
nanoid = "0.4.0"
lazy_static = "1.4.0"
futures = "0.3.15"
actix-service = "1"
actix-rt = "2.2.0"
async-trait = "0.1.50"
lapin = "1.7.1"
errors = {path = "../crates/errors"}
auth_middleware = {path = "../crates/auth_middleware"}
log = "0.4.0"
env_logger = "0.8.4"
diesel = { version = "1.4.4", features = ["postgres"] }

[dev-dependencies]
mockall = "0.9.1"
rstest = "0.10.0"
