[package]
name = "user"
version = "0.1.0"
authors = ["Artem <griukov@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
mongodb = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
jsonwebtoken = "7"
bcrypt = "0.8"
nanoid = "0.4.0"
