[package]
name = "auth_middleware"
version = "0.1.0"
authors = ["Artem <griukov@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-service = "1"
futures = "0.3.15"
claims = {path = "../claims"}
